bad/div_invalid_types_int_null.example_compiler_output
ERROR
[1mbad/div_invalid_types_int_null.lat:3:4: [1;31merror: [0;1mdivision is defined only for int values, not `int` and `null`[m
	0 / null;
	  [1;32m^[m
